--- a/VRChat/37/950337.html
+++ b/VRChat/37/950337.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "nrP0yiA/J5PsnrY7ywnFadbW1/Ipki6n9F44lTDSf7o="></script>
+    "R+Ih4GPf4CFwNJcZqGphj14OudE436wW7oFG6esW/yM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"チェックハット　無料有byもずくん","description":"http://3d.nicovideo.jp/works/td38376\n\nこちらのアイテムと一緒の内容です\n\n前回のキャスケット帽子の時は、頭に大きな物がついていることを前提に作れてなかったので（耳とか）\n大きくしてすっぽり被ってもよし、小さくしておしゃれ帽子にしてもよしなモデルを作成しました。\nそして今回はすでに4種類のテクスチャを同封しております、お好きな色を合わせてくださいね。\n\n基本VRchat前提で構成しています。\n無料配布です右記条件をチェックしてご利用ください。\n右記著作表示に関しては【もずくんの帽子使ったよ！　的なTweetとか報告してくれると嬉しいってだけです】\n\n配布物内容\n本体FBXデータ　テクスチャ4種類　りどみ \n\n著作表示　○　（著作ってより、もずくんの使ったよって報告が欲しいだけです）\n商用利用　○　（テクスチャは一部商業利用可能な物が含まれてます）\n収益　○　（収益化された配信にもどんどん使ってくれ）\n色変えや改変　○　（どんどんやって可愛いの作って）\n再配布　○　（○だけど渡すならリドミと配布URLも一緒にな）\nR18-18G　○　（どう使うねん）\n政治や宗教要素　×　（攻撃的な要素には使ってほしくない）\n","url":"https://booth.pm/ja/items/950337","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e2c0f6c5-5ba0-4d14-8298-1e93a6e970f3/i/950337/e556b939-b826-4a73-ad31-e57c87513817_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="nrP0yiA/J5PsnrY7ywnFadbW1/Ipki6n9F44lTDSf7o="></script>
+    nonce="R+Ih4GPf4CFwNJcZqGphj14OudE436wW7oFG6esW/yM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/950337/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               67
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/950337/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               67
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
