--- a/VRChat/94/945494.html
+++ b/VRChat/94/945494.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "GCHVikNCajaNw1tOK/4365oTSvGTntLUc7nec/b4ebA="></script>
+    "OAyjKT1be9+n5Q6vA4MRK+ieB8F2za7raMHgUenF/64="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"あずきバーソード","description":"VRchat向けの３Ｄモデルデータです。\nやっつけ仕事の作品ですのでクオリティは期待しないでください。","url":"https://booth.pm/ja/items/945494","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9b92b4aa-727e-4ad3-8a66-111e77c11365/i/945494/2d6b777b-cae7-46c6-be21-c4b2ca4a20e9_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GCHVikNCajaNw1tOK/4365oTSvGTntLUc7nec/b4ebA="></script>
+    nonce="OAyjKT1be9+n5Q6vA4MRK+ieB8F2za7raMHgUenF/64="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -175,10 +177,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/945494/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              102
+                              101
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -190,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/945494/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              102
+                              101
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
