--- a/VRChat/78/945378.html
+++ b/VRChat/78/945378.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "s8nFcGcPwGm+o63Kd1fjdphk1MblSX8EJm9BB5ZveQk="></script>
+    "8/D+jUSs0XXtvN2YVZBcVuHNbfkvwkQ0vM8M95HKlUA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"一箱460円の紙巻きタバコのモデル - NeverKnowsBest【VRChatアバター用アクセサリ】","description":"一箱460円の紙巻きタバコをイメージした3Dモデルです。\n寸法は実際の紙巻きタバコを参考に原寸で再現しています。\nFLCLのマミ美のタバコをイメージした印字のあるテクスチャファイルも同梱です。\n\n改変等自由なので、VRChatのアバターのワンポイントのアクセサリーとしてご利用いただけます。\n\nUnityPackage形式も同梱されているので、基本的な設定の場合インポートするだけですぐにUnityへ導入できます。\n\nデータファイルはZip形式で圧縮しています。","url":"https://booth.pm/ja/items/945378","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/35ad0fa7-eb31-41fa-b842-fcdd7687593f/i/945378/4c791052-7d33-476f-bf99-aa91424737a7_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="s8nFcGcPwGm+o63Kd1fjdphk1MblSX8EJm9BB5ZveQk="></script>
+    nonce="8/D+jUSs0XXtvN2YVZBcVuHNbfkvwkQ0vM8M95HKlUA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/945378/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               188
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/945378/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               188
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
