--- a/VRChat/66/944966.html
+++ b/VRChat/66/944966.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "T3ji3IOHeUwB8w42QUUZvTYD3mcIhzQT5o+0XK7jPIA="></script>
+    "3y4W/dY+PXPOdVf/ASwC7ucQOSXzc7CjYkKFbQuFYUU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"侍用装備","description":"VRCHAT用アクセサリーです。\n各種鞘の刀や矢筒、弓に付随した矢は子オブジェクトになっています。\n改変は自由です。\n他の方への再配布はご遠慮ください。","url":"https://booth.pm/ja/items/944966","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/952c1078-6805-447e-8b8e-e44f2166d1fd/i/944966/a0b9df8d-76fc-4aea-9306-1dcb28faac19_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="T3ji3IOHeUwB8w42QUUZvTYD3mcIhzQT5o+0XK7jPIA="></script>
+    nonce="3y4W/dY+PXPOdVf/ASwC7ucQOSXzc7CjYkKFbQuFYUU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/944966/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               147
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/944966/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               147
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
