--- a/VRChat/00/944100.html
+++ b/VRChat/00/944100.html
@@ -98,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "tEaEBQQ15TW5TA4rdTkQE3Svvzc4P2pO9TXvOBRVPb0="></script>
+    "QUsiO8sUZm+uIIo+11YQBZPsX7ng4a2NIVD4AtRh7Ng="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ちびひとみ","description":"VRCでもいまだ数がすくない、ひとつめちゃんのアバターです！\nデフォルメされた小さな頭身ですが、アバターとして問題はすくないはずです。\nひとつめちゃんになりたい、興味があるかたは是非！\n\n＊モデルを一部修正をしました。\n＊不都合がありかもしれないので、旧版もDLできます。","url":"https://booth.pm/ja/items/944100","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1130"},"image":"https://booth.pximg.net/c/620x620/574569af-e656-434d-9162-62acab0c5195/i/944100/198b6480-8d72-4aa0-82b8-6e975834a9bb_base_resized.jpg"}
     </script>
@@ -111,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tEaEBQQ15TW5TA4rdTkQE3Svvzc4P2pO9TXvOBRVPb0="></script>
+    nonce="QUsiO8sUZm+uIIo+11YQBZPsX7ng4a2NIVD4AtRh7Ng="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -135,6 +135,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -178,7 +180,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/944100/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
@@ -193,14 +195,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/944100/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
