--- a/VRChat/87/944187.html
+++ b/VRChat/87/944187.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "r02BPBojZ28/zdDdGhB+TcRsfvR/YPm1UIcZhlQCisc="></script>
+    "lG6cpir+s+GVGjTmH+FXaZEk69Ye580pHXAKfRv6YoE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"高周波ブレード CIWS-01A","description":"■VRChat向けの高周波ブレードモデルです\n■ポリゴン数(三角面)：998\n　テクスチャ：3枚(本体、鞘、デカール部位)\n■禁止事項：再配布、自作発言","url":"https://booth.pm/ja/items/944187","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/4c0b8e4e-23ce-4b6b-91ae-c803cad67328/i/944187/dab63741-759b-4f20-ab74-4a54ca349a83_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="r02BPBojZ28/zdDdGhB+TcRsfvR/YPm1UIcZhlQCisc="></script>
+    nonce="lG6cpir+s+GVGjTmH+FXaZEk69Ye580pHXAKfRv6YoE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/944187/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               471
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/944187/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               471
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
