--- a/VRChat/03/944103.html
+++ b/VRChat/03/944103.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "KO+NpXXCCaaBM2qIXemP2l9Z6u8cAv6xp9v8imzbylA="></script>
+    "wMpWUp45Njz9RQ5H5mqJJLSDOO1qvzQuZo2RpvzS4oU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『nureT』","description":"○VRChatデスクトップモード想定のオリジナル3Dモデルです。\n・VRでの動作は確認していません。\n\n○VRchatでSift+F3～F8を押すとTシャツの文字と表情が変わります。\n・文字は改変しやすいと思うので、お好みの文字を作ってください。\n・改変方法の説明画像も同梱しています。\n\n○UnityのHumanoid形式に対応\n\n○リップシンク15種、自動まばたき登録済のUnityPackage同梱\n・UnityPackageを読み込む前にVRchatSDKをインポートしてください。\n・DynamicBoneもあれば先にインポートしてください。\n\n\n○ 内容物\n1.UnityPackage\n2.テクスチャ(psd、png)\n3.blendファイル\n4.fbxファイル\n\n\n○改変可\n\n○商用利用可\n・クレジット不要\n\n○本モデルデータの再配布禁止\n・個人でのVRchatでの利用は可\n・VRChatのペデスタルへの使用は禁止\n\n\n本モデルデータを使用することによって何らかのトラブル・損失及び損害等が発生した場合でも当方は一切の責任を負いません。","url":"https://booth.pm/ja/items/944103","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/a7f87b5f-0026-44e2-91d9-d4b600441db7/i/944103/7933fe70-1b78-461b-a507-5920ec3518a1_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KO+NpXXCCaaBM2qIXemP2l9Z6u8cAv6xp9v8imzbylA="></script>
+    nonce="wMpWUp45Njz9RQ5H5mqJJLSDOO1qvzQuZo2RpvzS4oU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/944103/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               7
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/944103/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               7
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
